# Kizuna

./: .gitignore  README.md  eslint.config.mjs  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs  vite.config.js
.github/workflows/: build.yml
src/: App.vue  global.d.ts  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/libs/: cache.rs  commands.rs  create_config.rs  mod.rs  report.rs
src-tauri/src/modules/: get_config.rs  get_media.rs  get_processes.rs  get_processes_macos.rs  get_processes_win.rs  get_smtc.rs  icon_converter.rs  logs.rs  mod.rs  requests.rs
src/assets/css/: main.css
src/components/: Avatar.vue  Sidebar.vue
src/layouts/: Home.vue  ServerLogs.vue  Setting.vue
src/pages/: index.vue
src/pages/log/: index.vue
src/pages/setting/: index.vue
src/router/: index.js
src/stores/: eventStore.js  eventStore.ts  logsStore.js  logsStore.ts
