[package]
name = "kizuna"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kizuna_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-shell = "2"
windows = { version = "0.59.0", features = [
  "Media_Control",
  "Foundation",
  "Media_Playback",
  "Storage",
  "Storage_Streams",
] }
tokio = { version = "1.0", features = [ "full" ] }
serde_yaml = "0.9.33"
serde_derive = "1.0"
winapi = { version = "0.3", features = [
  "winuser",
  "processthreadsapi",
  "psapi",
  "handleapi",
  "winnt",
  "shellapi",
  "commctrl",
  "libloaderapi",
] }
reqwest = { version = "0.12.5", features = [
  "blocking",
  "json"
] }
chrono = "0.4.38"
base64 = "0.22.1"
image = "0.25.1"
once_cell = "1.18"
core-foundation = "0.10.0"
core-graphics = "0.24.0"
