[package]
name = "kizuna"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

[lib]
name = "kizuna_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
cargo-clippy = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dependencies]
tauri = { version = "2.2.5", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1.0", features = [ "full" ] }
serde_yaml = "0.9.33"
serde_derive = "1.0"
reqwest = { version = "0.12.5", features = [
  "blocking",
  "json"
] }
chrono = "0.4.38"
base64 = "0.22.1"
image = "0.25.1"
once_cell = "1.18"

# windows-only dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "processthreadsapi",
  "psapi",
  "handleapi",
  "winnt",
  "shellapi",
  "commctrl",
  "libloaderapi",
] }
windows = { version = "0.59.0", features = [
  "Media_Control",
  "Foundation",
  "Media_Playback",
  "Storage",
  "Storage_Streams",
] }

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-graphics = "0.24.0"
objc = "0.2.7"
